@@ -7,6 +7,10 @@ Next Release
 
 - Began using zc.buildout for development.
 
+- Increased automated test coverage.
+
+- Fixed KeyError reporting to not trip over a related KeyError while logging.
+
 
 Version 1.1.1 (2008-12-27)
 
